--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.10.1
 platformdirs==2.5.2
+prometheus-client==0.14.1
 pydantic==1.10.2
 pyparsing==3.0.9
 requests==2.28.1
