--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-anyio==3.6.1
-black==22.8.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-docker==6.0.0
-fastapi==0.85.0
+annotated-types==0.7.0
+anyio==4.6.2.post1
+black==24.10.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+docker==7.1.0
+fastapi==0.115.4
 h11==0.14.0
-idna==3.4
-isort==5.10.1
-mypy-extensions==0.4.3
-packaging==21.3
-pathspec==0.10.1
-platformdirs==2.5.2
-prometheus-client==0.14.1
-pydantic==1.10.2
-pyparsing==3.0.9
-requests==2.28.1
-sniffio==1.3.0
-starlette==0.20.4
-tomli==2.0.1
-typing_extensions==4.3.0
-urllib3==1.26.12
-uvicorn==0.18.3
-websocket-client==1.4.1
+idna==3.10
+isort==5.13.2
+mypy-extensions==1.0.0
+packaging==24.1
+pathspec==0.12.1
+platformdirs==4.3.6
+prometheus_client==0.21.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.2.0
+requests==2.32.3
+sniffio==1.3.1
+starlette==0.41.2
+tomli==2.0.2
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.32.0
+websocket-client==1.8.0
